Property Management System/force-app/main/default/objects/Reservation__c/Reservation__c.object-meta.xml
<CustomObject>
    <description>This object will store all the reservations which will be made from Grid.</description>
    <label>Reservation</label>
    <nameField>
        <displayFormat>RSVN-{0000}</displayFormat>
        <label>Reservation Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>