Property Management System/force-app/main/default/objects/Reservation__c/fields/Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason__c</fullName>
    <label>Other Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>