Property Management System/force-app/main/default/objects/Reservation__c/fields/Reservation_Email__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Email__c</fullName>
    <label>Reservation Email</label>
    <type>Email</type>
</CustomField>