Property Management System/force-app/main/default/objects/Reservation__c/fields/Reservation_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Member_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Reservation- Member Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>