Property Management System/force-app/main/default/objects/Reservation__c/fields/Reservation_Property__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Property__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Reservation Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>