Property Management System/force-app/main/default/objects/Reservation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reservation_Member_Name__c</columns>
    <columns>Reservation_Property__c</columns>
    <columns>Cancellation_Reason__c</columns>
    <columns>Reservation_Email__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>